# Pain-Mgmt-QLora

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
doc/: domain_knowledge.md
src/: config.py  evaluation.py  main.py  preprocess.py  train_model.py
src/config/: config.py
src/data/: argumentation.py  hybrid_train_data.py  preprocess.py  prompt.py  terms.py
src/model/: evaluation.py  fine_tune_model.py
src/utils/: data_loader.py  logger.py
