[project]
name = "pain-mgmt-qlora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "datasets",
    "peft",    
    "transformers",
    "torch==2.5.1+cu121",
    "torchaudio==2.5.1+cu121",
    "torchvision==0.18.1+cu121",
]

[tool.pip]
index-url = "https://download.pytorch.org/whl/cu121"